@startuml
skinparam classAttributeIconSize 0
hide circle
skinparam nodesep 75
skinparam ranksep 50

' --- USER ROLES ---
class User {
    +fullName
    +email
    +licenseNumber
    +licenseIssueDate
    +licenseRegion
}

class Learner {
    +experienceLevel
    +preferences
    +age
}

class Instructor {
    +yearsLicensed
    +travelRadius
    +rating
    +rate
}

class CarProvider {
    +rate
}

User <|-- Learner
User <|-- Instructor
User <|-- CarProvider

class Car {
    +makeModel
    +transmissionType
    +location
    +isAvailable
    +accessibilityFeatures
}

class Booking {
    +startTime
    +endTime
    +status
    +pickupLocation
}

class DrivingRoute {
    +pathData
    +estimatedTime
}

class TransitRoute {
    +transitMode
    +departureTime
    +arrivalLocation
    +walkingDistance
}


Learner "1" -down-> "0..*" Booking : schedules
Instructor "1" -down-> "0..*" Booking : supervises
Car "1" -right-> "0..*" Booking : utilizes

CarProvider "1" -down-> "0..*" Car : provides

Booking "1" -down-> "1" DrivingRoute : follows
Learner "1" -left-> "0..1" TransitRoute : reaches car via
Instructor "1" -right-> "0..1" TransitRoute : reaches car via

@enduml